added configuration for password reset and registration flow on proxy

--- a/mmadu-registration/src/main/resources/templates/password_reset_confirm.html
+++ b/mmadu-registration/src/main/resources/templates/password_reset_confirm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:with="proxyPath=${domainConfiguration?.passwordReset?.resourcesBaseUrl?:'/'}">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -36,7 +36,7 @@
     </p>
 
     <form class="form-signin card bg-info" action="#"
-          th:action="@{${proxyPath} + ${domainId} + '/passwordReset/confirm'}"
+          th:action="@{${(domainConfiguration?.passwordReset?.confirmationFormUrl != null)? domainConfiguration.passwordReset.confirmationFormUrl: ('/' + domainId + '/passwordReset/confirm')}}"
           th:object="${passwordResetRequestConfirm}" method="post">
         <input type="hidden" name="otpId" th:value="${passwordResetRequestConfirm.otpId}">
         <input type="hidden" name="userId" th:value="${passwordResetRequestConfirm.userId}">
