--- a/mmadu-registration/src/main/resources/templates/password_reset.html
+++ b/mmadu-registration/src/main/resources/templates/password_reset.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:with="proxyPath=${domainConfiguration?.passwordReset?.resourcesBaseUrl?:'/'}">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -35,7 +35,7 @@
         An Error occurred. Please fix form issues and try again.
     </p>
     <form class="form-signin card bg-info" action="#"
-          th:action="@{${proxyPath} + ${domainId} + '/passwordReset'}"
+          th:action="@{${(domainConfiguration?.passwordReset?.initiationFormUrl != null)? domainConfiguration.passwordReset.initiationFormUrl: ('/' + domainId + '/passwordReset')}}"
           th:object="${passwordResetRequest}" method="post">
 
         <h3 class="form-signin-heading"
