--- a/mmadu-registration/src/main/resources/templates/password_reset_completed.html
+++ b/mmadu-registration/src/main/resources/templates/password_reset_completed.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:with="proxyPath=${domainConfiguration?.passwordReset?.resourcesBaseUrl?:'/'}">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
